--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /year-archive/
 
   - title: "Videos"
-    url: /talks/
+    url: /videos/
 
   - title: "CV"
     url: /files/CV_ChiCongNguyen_2022.pdf
