--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "--Chi Cong Nguyen--"
   avatar           : "ChiCong.jpg"
-  bio              : "I'm currently a Ph.D. student"
-  location         : "University of New South Wales"
-  employer         : "Sydney, Australia"
+  bio              : "I'm currently a Ph.D. student at the University of New South Wales (UNSW), Sydney, Australia."
+  #location         : "University of New South Wales"
+  #employer         : "Sydney, Australia"
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=q0oMHaYAAAAJ&hl=en"
   email            : "cong.c.nguyen@unsw.edu.au"
