--- a/_config.yml
+++ b/_config.yml
@@ -184,7 +184,7 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
-  talks:
+  blogs:
     output: true
     permalink: /:collection/:path/
 
@@ -244,7 +244,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
-
+  # blogs
+  - scope:
+      path: ""
+      type: blogs
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 # Sass/SCSS
 sass:
   sass_dir: _sass
