--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "--Chi Cong Nguyen--"
   avatar           : "ChiCong.jpg"
-  bio              : "I'm currently a Ph.D. student at the University of New South Wales (UNSW), Sydney, Australia."
+  bio              : "I'm currently a Ph.D. Candidate at the University of New South Wales (UNSW), Sydney, Australia."
   #location         : "University of New South Wales"
   #employer         : "Sydney, Australia"
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
